--- a/produtos.html
+++ b/produtos.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="viewport" content="width=device">
-    <link rel="stylesheet" href="produtos.css"
-    <title>produtos - Barbearia Meno </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-         <header>
-                <div>
-                    <h1><img 
-                        id="logo" src="img/logo01.png"></h1>
-                    <ul>
-                        <li><a href="">index</a></li>
-                        <li><a href="">Produtos</a></li>
-                        <li><a href="">Contatos</a></li>
-                    </ul>   
-                </div>
-            </header>
+    
+</body>
+</html>
